<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_about"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.musicalapplication.AboutActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/displaytheinformation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/informationAbout" />

        <ImageView
            android:id="@+id/aboutImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/displaytheinformation"
            android:src="@drawable/maher" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/displaytheinformation"
            android:layout_toRightOf="@id/aboutImage"
            android:text="@string/information"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textColor="#000"

            android:textStyle="italic" />

        <TextView
            android:id="@+id/Extra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/aboutImage"
            android:text="@string/extraInfo"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textColor="#000"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/Extra"
            android:autoLink="web"
            android:text="@string/onlineInfo"
            android:textStyle="bold" />

        <Button
            android:id="@+id/openSongList"
            style="@style/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_margin="@dimen/eight_margin"
            android:text="@string/songs" />

        <Button
            android:id="@+id/openPhotActivity"
            style="@style/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/link"
            android:layout_margin="@dimen/eight_margin"
            android:text="@string/openPhoto" />

    </RelativeLayout>
</ScrollView>
