<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.musicalapplication.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:text="@string/content" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/eight_margin"
                android:animationCache="true"
                card_view:cardBackgroundColor="@color/bage"
                card_view:cardCornerRadius="20dp"
                card_view:cardMaxElevation="@dimen/cardview_compat_inset_shadow">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/eight_margin"
                    android:orientation="vertical">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/maher" />

                    <TextView
                        style="@style/text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/maher" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <Button
                android:id="@+id/photosButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/eight_margin"
                android:background="@color/bage"
                android:text="@string/Photos"
                android:textAppearance="@android:style/TextAppearance.Large"
                android:textStyle="bold|italic" />

            <Button
                android:id="@+id/aboutButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/eight_margin"
                android:background="@color/bage"
                android:text="@string/about"
                android:textAppearance="@android:style/TextAppearance.Large"
                android:textStyle="bold|italic" />


        </LinearLayout>
    </ScrollView>

</LinearLayout>
