<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_photos"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.musicalapplication.PhotosActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/theuse" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <HorizontalScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fillViewport="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:orientation="horizontal">

                    <ImageView
                        style="@style/image"
                        android:layout_width="match_parent"
                        android:layout_height="300dp"
                        android:src="@drawable/maherbackground" />

                    <ImageView
                        style="@style/image"
                        android:layout_width="match_parent"
                        android:layout_height="300dp"
                        android:src="@drawable/eight" />

                    <ImageView
                        style="@style/image"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/firstimage" />

                </LinearLayout>
            </HorizontalScrollView>

            <HorizontalScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fillViewport="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:orientation="horizontal">

                    <ImageView
                        style="@style/image"
                        android:layout_width="match_parent"
                        android:layout_height="300dp"
                        android:src="@drawable/seven" />

                    <ImageView
                        style="@style/image"
                        android:layout_width="match_parent"
                        android:layout_height="300dp"
                        android:src="@drawable/second" />

                    <ImageView
                        style="@style/image"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/six" />

                </LinearLayout>
            </HorizontalScrollView>

            <HorizontalScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fillViewport="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:orientation="horizontal">

                    <ImageView
                        style="@style/image"
                        android:layout_width="match_parent"
                        android:layout_height="300dp"
                        android:src="@drawable/third" />

                    <ImageView
                        style="@style/image"
                        android:layout_width="match_parent"
                        android:layout_height="300dp"
                        android:src="@drawable/fourth" />

                    <ImageView
                        style="@style/image"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/fifth" />

                </LinearLayout>
            </HorizontalScrollView>
        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/songs"
            style="@style/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/songs" />

        <Button
            android:id="@+id/about"
            style="@style/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/about" />

    </RelativeLayout>
</LinearLayout>
